1. Метод .of [#318832]