@@ -51,7 +51,7 @@ public class DepDescCompTest {
         List<String> input =
                 Arrays.asList("k2", "k1/sk1", "k1", "k2/sk1/ssk2", "k2/sk1/ssk1", "k1/sk2");
         List<String> expect =
-                Arrays.asList("k1", "k1/sk1", "k1/sk2", "k2", "k2/sk1/ssk1", "k2/sk1/ssk2");
+                List.of("k1", "k1/sk1", "k1/sk2", "k2", "k2/sk1/ssk1", "k2/sk1/ssk2");
         Departments.sortAsc(input);
         assertThat(input, is(expect));
     }
@@ -61,7 +61,7 @@ public class DepDescCompTest {
         List<String> input =
                 Arrays.asList("k2", "k2/sk2/ssk1", "k1/sk1", "k1", "k2/sk1/ssk2", "k2/sk1/ssk1");
         List<String> expect =
-                Arrays.asList("k2", "k2/sk1/ssk1", "k2/sk1/ssk2", "k2/sk2/ssk1", "k1", "k1/sk1");
+                List.of("k2", "k2/sk1/ssk1", "k2/sk1/ssk2", "k2/sk2/ssk1", "k1", "k1/sk1");
         Departments.sortDesc(input);
         assertThat(input, is(expect));
     }
